Problems for Assignment-1: Linear Data Structures

--- a/Linear_Data_Structures_Assignment-1.ipynb
+++ b/Linear_Data_Structures_Assignment-1.ipynb
@@ -109,13 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "String is -  thisisit\n",
       "First Non-Repeated Character:  h\n"
      ]
     }
@@ -139,18 +140,20 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    string1 = input('Enter a string: ')\n",
+    "    print('String is - ',string1)\n",
     "    print('First Non-Repeated Character: ',Non_Repeated_Character(string1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of disks -  3\n",
       "Move disk 1 from rod A to rod C\n",
       "Move disk 2 from rod A to rod B\n",
       "Move disk 1 from rod C to rod B\n",
@@ -174,6 +177,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    disks = int(input('Enter number of disks: '))\n",
+    "    print('Number of disks - ',disks)\n",
     "    tower_of_hanoi(disks,'A','B','C')\n"
    ]
   },
